# OpenEnv

./: .gitignore  README.md
stochastic_lab_env/: .dockerignore  Dockerfile  README.md  pyproject.toml
stochastic_lab_env/outputs/evals/: baseline_scores.json
stochastic_lab_env/scripts/: __init__.py
stochastic_lab_env/server/: __init__.py  app.py  requirements.txt
stochastic_lab_env/tests/: conftest.py  test_stochastic_lab_environment.py
stochastic_lab_env_deploy/: README.md  __init__.py  baseline.py  client.py  inference.py  models.py  openenv.yaml
stochastic_lab_env_deploy/scripts/: baseline_inference.py
stochastic_lab_env_deploy/server/: Dockerfile  stochastic_lab_environment.py
